fix: associationLogo renamed to agencyLogo